@startuml DataModels
interface IBaseFood {
    + id: number
    + name: string
    + category: string
}

interface IFood extends IBaseFood {
    + nutrients: INutrient[]
}

interface INutrient {
    + name: string
    + unit: IUnit
    + percentOfDaily: number
}

interface IUnit {
    + unit: string
    + value: number
}

interface IFoodItem extends IFood {
    + expirationDate: number
}

class FoodSchema implements IFood {}

class FoodItemSchema implements IFoodItem {}

class UnitSchema implements IUnit {}

class NutrientSchema implements INutrient {}

interface IBaseUser {
    + firstName: string
    + lastName: string
    + lastSeen: number
}

interface ISensitiveUser extends IBaseUser {
    + id?: string
    + inventory: IFoodItem[]
}

interface IInternalUser extends ISensitiveUser {
    + uid: string
}

class InternalUserSchema implements IInternalUser {}

interface IBaseRecipe {
    + id: number
    + name: string
}

interface IRecipe extends IBaseRecipe {
    + cuisines: string[]
    + diets: string[] 
    + instruction: IInstruction
    + instructionSteps: IInstruction[]
    + servings: number
    + cookingTimeInMinutes: number
    + preparationInMinutes: number
    + type: string
    + totalCost: string
}

interface IInstruction {
    + instruction: string
    + ingredients: IFood[]
}

IFood *-- IInstruction
IInstruction *-- IRecipe
IFoodItem *-- ISensitiveUser
INutrient *-- IFood
IUnit *-- INutrient

@enduml